--- a/output/index.html
+++ b/output/index.html
@@ -8,7 +8,7 @@
     <title>My Team</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
 
@@ -26,53 +26,52 @@
             <div class="team-area col-12 d-flex justify-content-center card-deck">
                 <div class="card employee-card">
     <div class="card-header bg-danger">
-        <h2 class="card-title">Morphus</h2>
+        <h2 class="card-title">Kimberley Jefferies</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 001</li>
-            <li class="list-group-item">Email: <a href="mailto:morphus@zion.com">morphus@zion.com</a></li>
-            <li class="list-group-item">Office number: 1245</li>
+            <li class="list-group-item">ID: 010883</li>
+            <li class="list-group-item">Email: <a href="mailto:kimberleyj@hotmail.com">kimberleyj@hotmail.com</a></li>
+            <li class="list-group-item">Office number: 07963123456</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header bg-primary">
-        <h2 class="card-title">Neo</h2>
+        <h2 class="card-title">Jonathan Jefferies</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 002</li>
-            <li class="list-group-item">Email: <a href="mailto:neo@zion.com">neo@zion.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/the-one" target="_blank" rel="noopener noreferrer">the-one</a></li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header bg-primary">
-        <h2 class="card-title">Trinity</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 003</li>
-            <li class="list-group-item">Email: <a href="mailto:trinity@zion.com">trinity@zion.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/biker-chic" target="_blank" rel="noopener noreferrer">biker-chic</a></li>
+            <li class="list-group-item">ID: 011285</li>
+            <li class="list-group-item">Email: <a href="mailto:jonathanj@hotmail.co.uk">jonathanj@hotmail.co.uk</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/jj77847" target="_blank" rel="noopener noreferrer">jj77847</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header bg-success">
-        <h2 class="card-title">Mouse</h2>
+        <h2 class="card-title">Ellen Jefferies</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 004</li>
-            <li class="list-group-item">Email: <a href="mailto:mouse@zion.com">mouse@zion.com</a></li>
-            <li class="list-group-item">School: zion high</li>
+            <li class="list-group-item">ID: 150617</li>
+            <li class="list-group-item">Email: <a href="mailto:ellenj@hotmail.com">ellenj@hotmail.com</a></li>
+            <li class="list-group-item">School: Newcastle Academy</li>
+        </ul>
+    </div>
+</div>,<div class="card employee-card">
+    <div class="card-header bg-success">
+        <h2 class="card-title">Hannah Jefferies</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 151220</li>
+            <li class="list-group-item">Email: <a href="mailto:hannahj@hotmail.com">hannahj@hotmail.com</a></li>
+            <li class="list-group-item">School: Newcastle Academy</li>
         </ul>
     </div>
 </div>
